--- a/package.json
+++ b/package.json
@@ -3,8 +3,21 @@
   "version": "1.0.0",
   "description": "",
   "main": "handler.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serverless": "serverless",
+    "release": "serverless deploy",
+    "purge": "serverless remove",
+    "set-webhook": "telegraf -m setWebhook"
+  },
+  "dependencies": {
+    "serverless-http": "^3.0.2",
+    "telegraf": "^4.9.0"
+  },
+  "devDependencies": {
+    "serverless": "^3.22.0",
+    "serverless-plugin-typescript": "^2.1.2",
+    "typescript": "^4.7.4"
   },
   "repository": {
     "type": "git",
@@ -15,9 +28,5 @@
   "bugs": {
     "url": "https://github.com/uaKorona/watermark-bot/issues"
   },
-  "homepage": "https://github.com/uaKorona/watermark-bot#readme",
-  "dependencies": {
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6"
-  }
+  "homepage": "https://github.com/uaKorona/watermark-bot#readme"
 }
