--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "set-webhook": "telegraf -m setWebhook"
   },
   "dependencies": {
+    "jimp": "^0.16.1",
     "serverless-http": "^3.0.2",
     "telegraf": "^4.9.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.29",
     "serverless": "^3.22.0",
     "serverless-plugin-typescript": "^2.1.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "ts-node": "^10.7.0"
   },
   "repository": {
     "type": "git",
