--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "serverless": "serverless",
     "release": "serverless deploy",
     "purge": "serverless remove",
-    "set-webhook": "telegraf -m setWebhook"
+    "set-webhook": "telegraf -m setWebhook",
+
+    "watch-ts": "tsc -w",
+    "serve-debug": "nodemon --inspect dist/handler.js",
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\""
+
   },
   "dependencies": {
     "jimp": "^0.16.1",
@@ -20,7 +25,9 @@
     "serverless": "^3.22.0",
     "serverless-plugin-typescript": "^2.1.2",
     "typescript": "^4.7.4",
-    "ts-node": "^10.7.0"
+    "ts-node": "^10.7.0",
+    "concurrently": "^7.2.1",
+    "nodemon": "^2.0.16"
   },
   "repository": {
     "type": "git",
