--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "rootDir": ".",
+    "outDir": "dist",
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
     "strict": true,
@@ -11,5 +13,6 @@
       "*": ["node_modules/*", "src/types/*"]
     }
   },
-  "include": ["handler.ts", "src/**/*"]
+  "include": ["handler.ts", "src/**/*"],
+  "exclude": ["node_modules"]
 }
